crates/usfm_semantic/tests/snapshots/checks__empty_book.snap
---
source: crates/usfm_semantic/tests/checks.rs
description: "\\id GEN Genesis\n"
---
Book GEN "Genesis" @0..15
--- diagnostics
error[empty-book] @16..16: book contains only an `\id` line
